--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@ required nos campos das tabelas
 
 aumentar o tamanho dos outros textos
 
-
-
 Eduardo achou estranho as duas:
 Montar e utilizar eletrodomésticos seguindo instruções em vídeo
 Montar e utilizar eletrodomésticos seguindo manual de instruções impresso
@@ -11,14 +9,15 @@ Montar e utilizar eletrodomésticos seguindo manual de instruções impresso
 Melhor descrição no corsi: 2 tentativas por trial
 adicionar 3 samples de 3 blocos, para explicar as intruções para a pessoa
 
+Corsi: mudar a fonte do aviso (repita a sequência) para 30px, e alinhar à cima/esquerta
 
-resolução monitor 1440 x 900
-
-Mexer na A3B4 no shading , cloro está estranho.
 
 mudar estrutura de dados para o teste de química (as variáveis mudaram de nome)
 
-Fix alinhamento das imagens
+Test química - aumentar distancia entre bullet e texto
+Fim do iRT : próxima etapa precisa ficar em uma tela única
 
+Dificuldade dos modelos:
+1 a 5 transformar em um dropdown de mto fácil a mto dificil
 
-Pxóxima etapa button ir para o meio (hor, vert)
+resolução monitor 1440 x 900
