--- a/todo.txt
+++ b/todo.txt
@@ -6,18 +6,15 @@ Eduardo achou estranho as duas:
 Montar e utilizar eletrodomésticos seguindo instruções em vídeo
 Montar e utilizar eletrodomésticos seguindo manual de instruções impresso
 
-Melhor descrição no corsi: 2 tentativas por trial
-adicionar 3 samples de 3 blocos, para explicar as intruções para a pessoa
-
-Corsi: mudar a fonte do aviso (repita a sequência) para 30px, e alinhar à cima/esquerta
-
+Corsi: mudar a fonte do aviso (repita a sequência) para 30px
 
 mudar estrutura de dados para o teste de química (as variáveis mudaram de nome)
 
 Test química - aumentar distancia entre bullet e texto
 Fim do iRT : próxima etapa precisa ficar em uma tela única
 
-Dificuldade dos modelos:
-1 a 5 transformar em um dropdown de mto fácil a mto dificil
-
 resolução monitor 1440 x 900
+
+adicionar calculo simples da pontuação do corsi
+
+vERIFICAR GOOGLE KEEP
