--- a/todo.txt
+++ b/todo.txt
@@ -17,4 +17,26 @@ resolução monitor 1440 x 900
 
 adicionar calculo simples da pontuação do corsi
 
-vERIFICAR GOOGLE KEEP
+Priedades > propriedades
+Pensando na sua experiência como estudante > pensando na sua experiência ao aprender
+Tabela Tampa header de mais fácil a mais difícil 
+
+Teste química:
+Alterar uma coisa do da target, para cada alternativa
+
+Psvtr: 
+Linha branca vertical nas imagens 
+Explicitar que não deve ser usada a mão 
+
+Corsi
+Intro 2 para 3 quadrados
+Audio : sandbox
+
+Psvtr:
+Colocar os Botões pronto e começar no mesmo lugar (remove e não hide)
+
+Questões dificuldades 
+Corsi tem dificuldade que varia
+
+Dados: 
+Testeestruturas está com dados errados 
